# adhocmatch

./: README.md  config.yaml  pyproject.toml  setup.cfg
adhocmatch/: agents.py  cli.py  config.py  data_loader.py  embeddings.py  evaluation.py  matching.py
data/: consultants.json  consultants_with_embeddings.parquet  projects.json
output/: top_consultants.json  top_consultants.xlsx
prompts/: base_prompt.txt
