[metadata]
name = adhocmatch
version = 0.1.0
description = Recomendação de consultores e pareceristas com LLMs e embeddings
long_description = file: README.md
long_description_content_type = text/markdown
author = Seu Nome
license = MIT
license_file = LICENSE
platforms = any

[options]
packages = find:
python_requires = >=3.9
install_requires =
    langchain>=0.2.0
    langchain-openai
    sentence-transformers
    pandas
    pyarrow
    structlog
    openai
    tqdm

[options.entry_points]
console_scripts =
    adhocmatch = adhocmatch.cli:main
